Directive Contact coté client

--- a/web/app/views/layout.html
+++ b/web/app/views/layout.html
@@ -43,4 +43,6 @@
     <!-- Display resume -->
     <resume cv="current_resume" flex="auto" style="height:100%; overflow: auto"></resume>
 
+    <contact contact="current_contact" flex="auto" style="height: 100%; overflow: auto"></contact>
+
 </div>
