--- a/web/app/views/layout.html
+++ b/web/app/views/layout.html
@@ -30,7 +30,7 @@
 
     </div>
 
-    <!-- Action to hide or not Resume-->
+    <!-- Action to hide or not Resume -->
     <div layout="column">
         <md-button ng-click="hide()" class="md-icon-button" id="hide" aria-label="Masquer sidenav">
             <md-icon md-svg-src="images/icons/ic_keyboard_arrow_left_black_24px.svg"></md-icon>
@@ -43,6 +43,6 @@
     <!-- Display resume -->
     <resume cv="current_resume" flex="auto" style="height:100%; overflow: auto"></resume>
 
-    <contact contact="current_contact" flex="auto" style="height: 100%; overflow: auto"></contact>
+    <message message="current_message" flex="auto" style="height: 100%; overflow: auto"></message>
 
 </div>
