--- a/web/app/views/directives/message.html
+++ b/web/app/views/directives/message.html
@@ -6,13 +6,13 @@
 
     <md-list style="height: 90%; overflow: auto">
 
-        <md-list-item class="md-3-line" ng-click="displayContact(contact)"
-                      ng-repeat="contact in contacts.toArray() | orderBy : '-contact.date'"
+        <md-list-item class="md-3-line" ng-click="displayMessage(message)"
+                      ng-repeat="contact in message.toArray() | orderBy : '-message.date'"
                       ng-class="{'active' : resume.person.name == current_resume.person.name}">
 
             <div class="md-list-item-text" layout="column">
-                <h3>{{resume.contact.contacts.nom}}</h3>
-                <h4 class="subText">{{resume.contact.contacts.message | textLimit : 30}}</h4>
+                <h3>{{resume.message.messages.nom}}</h3>
+                <h4 class="subText">{{resume.message.messages.contenuMessage | textLimit : 30}}</h4>
             </div>
 
         </md-list-item>
