--- a/web/app/views/directives/message-list.html
+++ b/web/app/views/directives/message-list.html
@@ -1,24 +1,31 @@
 <!-- ContactNav -->
-<div flex="25" layout="column" id="contactNav" class="md-whiteframe-3dp" layout-fill>
+<!--<div flex="25" layout="column" id="contactNav" class="md-whiteframe-3dp" layout-fill>-->
 
-    <div>Contacter</div>
-    <div>Liste des contacts</div>
+    <!--<md-list style="height: 90%; overflow: auto">-->
 
-    <md-list style="height: 90%; overflow: auto">
+        <!--<md-list-item class="md-3-line" ng-click="displayMessage(message)"-->
+                      <!--ng-repeat="message in current_messages">-->
 
-        <md-list-item class="md-3-line" ng-click="displayMessage(message)"
-                      ng-repeat="contact in message.toArray() | orderBy : '-message.date'"
-                      ng-class="{'active' : resume.person.name == current_resume.person.name}">
+            <!--<div class="md-list-item-text" layout="column">-->
+                <!--<h3>{{message.name}}</h3>-->
+                <!--<h4 class="subText">{{message.textMessage | textLimit : 30}}</h4>-->
+            <!--</div>-->
 
-            <div class="md-list-item-text" layout="column">
-                <h3>{{resume.message.messages.nom}}</h3>
-                <h4 class="subText">{{resume.message.messages.contenuMessage | textLimit : 30}}</h4>
-            </div>
+        <!--</md-list-item>-->
 
-        </md-list-item>
 
-    </md-list>
+    <!--</md-list>-->
 
-    <div flex></div>
+<!--</div>-->
 
+<div>
+    <md-input-container>
+        <label>Nom</label>
+        <input type="text" name="name" class="form-control" ng-model="contactname" required />
+    </md-input-container>
+    <md-input-container>
+        <label>Message</label>
+        <textarea ng-model="textmessage"></textarea>
+    </md-input-container>
+    <md-button ng-click="sendMessage(current_resume.id)">Envoyer le message </md-button>
 </div>
