--- a/web/app/views/layout.html
+++ b/web/app/views/layout.html
@@ -49,11 +49,11 @@
         <md-list class="md-dense" ng-if="current_resume" resumeID="current_resume.id" flex>
             <md-subheader class="md-no-sticky">Liste des messages</md-subheader>
             <!--<md-list-item class="md-3-line" ng-repeat="msg in message">-->
-            <md-list-item class="md-3-line" ng-repeat="msg in message" ng-if="message.resume = resumeID">
+            <md-list-item class="md-3-line" ng-repeat="msg in message" ng-if="msg.resume = resumeID">
                 <div class="md-list-item-text" layout="column">
-                    <h3>{{message.nom}}</h3>
-                    <h4>{{message.date}}</h4>
-                    <p>{{message.text}}</p>
+                    <h3>{{msg.nom}}</h3>
+                    <h4>{{msg.date}}</h4>
+                    <p>{{msg.text}}</p>
                 </div>
             </md-list-item>
         </md-list>
